# video-to-screenshots

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  bootstrap.sh  entrypoint.sh  pyproject.toml
src/: download_video.py  generate_screenshots.py
